--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "devserver": "npm-run-all --parallel frontend backend",
+    "frontend": "ionic serve",
+    "backend": "nodemon ./bin/www"
   },
   "dependencies": {
     "@angular/common": "^7.2.2",
@@ -27,6 +30,7 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "cookie-parser": "~1.4.3",
+    "cordova-plugin-ionic": "^5.3.0",
     "core-js": "^2.5.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -35,7 +39,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -62,6 +66,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "nodemon": "^1.19.0",
     "protractor": "~5.4.0",
     "ts-node": "~8.1.0",
     "tslint": "~5.16.0",
