--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "pug": "^2.0.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
