--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "cheerio": "^1.0.0-rc.3",
+    "com.testfairy.cordova-plugin": "2.18.0",
     "cookie-parser": "~1.4.3",
     "cordova-plugin-ionic": "^5.3.0",
     "core-js": "^2.5.4",
@@ -76,5 +77,10 @@
     "tslint": "~5.16.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "com.testfairy.cordova-plugin": {}
+    }
+  }
 }
