--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
               },
-              ".htaccess"
+              "src/.htaccess"
             ],
             "styles": [
               {
