--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
                 "output": "./svg"
               },
               {
-                "glob": "*",
+                "glob": "*.*",
                 "input": "src/.htaccess",
                 "output": "/"
               }
