--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cheerio": "^1.0.0-rc.3",
     "com.testfairy.cordova-plugin": "2.18.0",
     "cookie-parser": "~1.4.3",
+    "cordova-android": "8.0.0",
     "cordova-plugin-ionic": "^5.3.0",
     "core-js": "^2.5.4",
     "debug": "~2.6.9",
@@ -64,6 +65,12 @@
     "@types/node": "~12.0.0",
     "acorn": "^6.1.1",
     "codelyzer": "~4.5.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -80,7 +87,18 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "com.testfairy.cordova-plugin": {}
-    }
+      "com.testfairy.cordova-plugin": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
